--- a/css/scss/_posts.scss
+++ b/css/scss/_posts.scss
@@ -58,7 +58,7 @@ section#posts {
                     right: 0;
                     transform: translate(50%, -50%) scale(0);
                     background: #3760d3;
-                    transition: transform 0.5s ease-out;
+                    transition: transform 1s cubic-bezier(0, 0, 0.2, 1);
                 }
 
                 &:hover::before {
