--- a/css/scss/_services.scss
+++ b/css/scss/_services.scss
@@ -85,7 +85,7 @@ div#services {
                     a {
                         position: relative;
                         z-index: 2;
-                        color: #444;
+                        color: $main;
                         transition: 0.3s ease-out;
                     }
 
