--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -185,7 +185,7 @@ header {
             z-index: 5;
             color: white;
             h1 {
-                font-size: 45px;
+                font-size: 40px;
             }
             p {
                 font-size: 14px;
@@ -206,7 +206,7 @@ header {
     .hero_slider {
         --offsetX: 0px;
         --offsetY: 0px;
-        margin-top: 70px;
+        margin-top: 0px;
         .content {
             display: flex;
             flex-direction: column;
@@ -227,53 +227,21 @@ header {
         z-index: -99;
         pointer-events: none;
         transition: all 0.5s ease-out;
-        transform: translateY(20px);
         min-width: 170px;
-        &::before,
-        &::after {
-            position: absolute;
-            content: "";
-            top: 0;
-        }
-
-        &::before {
-            width: 100%;
-            height: 3px;
-            z-index: 100;
-            background: $main;
-            left: 0;
-        }
-        &::after {
-            width: 0;
-            height: 0;
-            z-index: 100;
-            border: 10px solid transparent;
-            transform: rotate(45deg) translateY(-10px);
-            left: 20px;
-            border-top-color: $main;
-            border-left-color: $main;
-        }
+        background: $main;
         ul li a {
             box-shadow: none;
             border: none;
             border-radius: 0px;
             transition: all 0.5s ease-out;
             padding: 10px;
+            color: white !important;
+            background: none;
             &::before {
-                width: 3px;
-                height: 100%;
-                top: 0;
-                left: 0;
-                background: $main;
-                transform: scale(1);
+                content: unset;
             }
-
             &:hover {
-                color: white !important;
-                background: $main;
-                &::before {
-                    background: white;
-                }
+                background: #678df8;
             }
         }
     }
@@ -281,7 +249,6 @@ header {
     &:hover .dropdown {
         opacity: 1;
         visibility: visible;
-        transform: translateY(12px);
         z-index: 99;
         pointer-events: all;
     }
@@ -347,12 +314,65 @@ header {
 }
 
 @media (max-width: 500px) {
+    .mobile_nav {
+        line {
+            stroke: white;
+        }
+    }
     #hero {
         .hero_slider {
             .hero-slider-wrapper {
                 .hero-slider-item.swiper-slide-active {
                     .content {
                         clip-path: circle(500px at 0% 0%);
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1000px) {
+    .link-drop div.dropdown {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 100%;
+        opacity: 1;
+        background: rgba(255, 255, 255, 0.7);
+        backdrop-filter: blur(10px);
+        z-index: 10;
+        justify-content: center;
+        transform: translate(0px, 0px) !important;
+        display: flex;
+        align-items: center;
+        pointer-events: all;
+        &::before,
+        &::after {
+            content: unset;
+        }
+        ul {
+            flex-direction: column;
+            height: 85vh;
+            justify-content: space-evenly;
+            align-items: center;
+            li {
+                overflow: hidden;
+                display: block;
+                a {
+                    font-family: "PlayFair Display";
+                    font-size: 26px;
+                    padding: 10px 16px;
+                    display: inline-block;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    opacity: 0;
+                    text-align: center;
+                    width: 100%;
+                    background: none;
+                    &::before {
+                        content: unset;
                     }
                 }
             }
