--- a/css/scss/_utils.scss
+++ b/css/scss/_utils.scss
@@ -99,3 +99,29 @@ section {
         }
     }
 }
+
+.back-to-top {
+    position: fixed;
+    display: none;
+    right: 15px;
+    bottom: 15px;
+    z-index: 995;
+}
+
+.back-to-top i {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    width: 44px;
+    height: 44px;
+    border-radius: 50px;
+    color: #3760d3;
+    transition: all 0.4s;
+    border: 2px solid #3760d3;
+}
+
+.back-to-top i:hover {
+    background: #3760d3;
+    color: white;
+}
